project2b/build/edu/nyu/csci/cc/fall14/SimpleList.log
+ java -ea -cp /home/abhi/Desktop/compiler3/project2b/build:/home/abhi/.hacs/share/java/hacs.jar:/home/abhi/.hacs/share/java/crsx.jar -Dfile.encoding=UTF-8 -Xss20000K -Xmx2000m net.sf.crsx.run.Crsx allow-unnamed-rules allow-missing-cases sortify verbose=1 'grammar=('\''org.crsx.hacs.HxRaw'\'';'\''net.sf.crsx.text.Text'\'';)' input=/home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.hx category=rawHxModule output=/home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.hxraw.tmp simple-terms max-indent=10 width=255
// $Sortify
// $[Load, "/home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.hx", "rawHxModule"]

// Normalizing with 0 rules
// Normal form with null after 0 rewrites

+ mv /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.hxraw.tmp /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.hxraw
+ '[' -x /home/abhi/.hacs/lib/hacs/HacsRewriter -a -z '' ']'
+ LD_LIBRARY_PATH=/home/abhi/Desktop/compiler4/hacs/lib/icu4c/lib
+ /home/abhi/.hacs/lib/hacs/HacsRewriter wrapper=Prep input=/home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.hxraw output=/home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.prep.tmp
+ mv /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.prep.tmp /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.prep
+ sed -e :start -e '/[/][*][*][*]\([^*]\|[*][^*]\)*$/{N; bstart;}' -e 's./[*][*][*]\([A-Z]*[&]\)*USERPG\([&][A-Z]*\)*: *\(\([^*]\|[*][^*]\)*\)[*][*][*]/.\3.g' -e tstart -e 's./[*][*][*]\([^*]\|[*][^*]\)*[*][*][*]/..g' -e tstart -e 's/ *$//gM' /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.prep
+ mv /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleListParser.pg.tmp /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleListParser.pg
+ java -ea -cp /home/abhi/Desktop/compiler3/project2b/build:/home/abhi/.hacs/share/java/hacs.jar:/home/abhi/.hacs/share/java/crsx.jar net.sf.crsx.pg.PG verbose=1 -source=/home/abhi/Desktop/compiler3/project2b/build /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleListParser.pg
+ mkdir -p /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/
+ cd /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/
+ java -cp /home/abhi/.hacs/share/java/javacc.jar javacc SimpleListParser.jj
Java Compiler Compiler Version 6.0_1 (Parser Generator)
(type "javacc" with no arguments for help)
Reading from file SimpleListParser.jj . . .
File "TokenMgrError.java" is being rebuilt.
File "ParseException.java" is being rebuilt.
File "Token.java" is being rebuilt.
File "SimpleCharStream.java" is being rebuilt.
Parser generated successfully.
+ cd /home/abhi/Desktop/compiler3/project2b/build
+ javac -cp :/home/abhi/.hacs/share/java/hacs.jar:/home/abhi/.hacs/share/java/crsx.jar edu/nyu/csci/cc/fall14/SimpleListParser.java
Note: edu/nyu/csci/cc/fall14/SimpleListParser.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
+ java -ea -cp /home/abhi/Desktop/compiler3/project2b/build:/home/abhi/.hacs/share/java/hacs.jar:/home/abhi/.hacs/share/java/crsx.jar -Dfile.encoding=UTF-8 -Xss20000K -Xmx2000m net.sf.crsx.run.Crsx allow-unnamed-rules allow-missing-cases sortify verbose=1 'grammar=('\''org.crsx.hacs.HxRaw'\'';'\''net.sf.crsx.text.Text'\'';)' input=/home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.hx category=rawHxModule output=/home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.hxraw.tmp simple-terms max-indent=10 width=255
// $Sortify
// $[Load, "/home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.hx", "rawHxModule"]

// Normalizing with 0 rules
// Normal form with null after 0 rewrites

+ mv /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.hxraw.tmp /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.hxraw
+ '[' -x /home/abhi/.hacs/lib/hacs/HacsRewriter -a -z '' ']'
+ LD_LIBRARY_PATH=/home/abhi/Desktop/compiler4/hacs/lib/icu4c/lib
+ /home/abhi/.hacs/lib/hacs/HacsRewriter wrapper=Prep input=/home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.hxraw output=/home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.prep.tmp
+ mv /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.prep.tmp /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.prep
+ sed -e :start -e '/[/][*][*][*]\([^*]\|[*][^*]\)*$/{N; bstart;}' -e 's./[*][*][*]\([A-Z]*[&]\)*METAPG\([&][A-Z]*\)*: *\(\([^*]\|[*][^*]\)*\)[*][*][*]/.\3.g' -e tstart -e 's./[*][*][*]\([^*]\|[*][^*]\)*[*][*][*]/..g' -e tstart -e 's/ *$//gM' /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleList.prep
+ mv /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleListHx.pgtemplate.tmp /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleListHx.pgtemplate
+ mkdir -p /home/abhi/Desktop/compiler3/project2b/build/org/crsx/hacs
+ cd /home/abhi/Desktop/compiler3/project2b/build
+ jar xf /home/abhi/.hacs/share/java/hacs.jar org/crsx/hacs/Hx.pgnames
+ cd /home/abhi/Desktop/compiler3/project2b/build
+ jar xf /home/abhi/.hacs/share/java/hacs.jar org/crsx/hacs/Hx.pgdecs
+ cd /home/abhi/Desktop/compiler3/project2b/build
+ jar xf /home/abhi/.hacs/share/java/hacs.jar org/crsx/hacs/Hx.pgpre
+ cd /home/abhi/Desktop/compiler3/project2b/build
+ jar xf /home/abhi/.hacs/share/java/hacs.jar org/crsx/hacs/Hx.pgpost
++ sed -n 's/prefix *"\(.*\)".*/\1/p' /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleListHx.pgtemplate
+ prefix=simplelistMeta_
+ sed -e s/%%%PREFIX%%%/simplelistMeta_/g
+ sed -e '/%%%HXNONTERMINALS%%%/ bnames' -e '/%%%HXDECLARATIONS%%%/ bdecs' -e '/%%%HXPREPRODUCTIONS%%%/ bpre' -e '/%%%HXPOSTPRODUCTIONS%%%/ bpost' -e b -e :names -e 'r /home/abhi/Desktop/compiler3/project2b/build/org/crsx/hacs/Hx.pgnames' -e d -e :decs -e 'r /home/abhi/Desktop/compiler3/project2b/build/org/crsx/hacs/Hx.pgdecs' -e d -e :pre -e 'r /home/abhi/Desktop/compiler3/project2b/build/org/crsx/hacs/Hx.pgpre' -e d -e :post -e 'r /home/abhi/Desktop/compiler3/project2b/build/org/crsx/hacs/Hx.pgpost' -e d -e 's/ *$//' /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleListHx.pgtemplate
+ mv /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleListHx.pg.tmp /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleListHx.pg
+ java -ea -cp /home/abhi/Desktop/compiler3/project2b/build:/home/abhi/.hacs/share/java/hacs.jar:/home/abhi/.hacs/share/java/crsx.jar net.sf.crsx.pg.PG verbose=1 -source=/home/abhi/Desktop/compiler3/project2b/build /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/SimpleListHx.pg
+ mkdir -p /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/
+ cd /home/abhi/Desktop/compiler3/project2b/build/edu/nyu/csci/cc/fall14/
+ java -cp /home/abhi/.hacs/share/java/javacc.jar javacc SimpleListHx.jj
Java Compiler Compiler Version 6.0_1 (Parser Generator)
(type "javacc" with no arguments for help)
Reading from file SimpleListHx.jj . . .
Warning: Line 4279, Column 18: Non-ASCII characters used in regular expression.Please make sure you use the correct Reader when you create the parser, one that can handle your character set.
File "TokenMgrError.java" is being rebuilt.
File "ParseException.java" is being rebuilt.
File "Token.java" is being rebuilt.
File "SimpleCharStream.java" is being rebuilt.
Parser generated with 0 errors and 1 warnings.
+ cd /home/abhi/Desktop/compiler3/project2b/build
+ javac -cp :/home/abhi/.hacs/share/java/hacs.jar:/home/abhi/.hacs/share/java/crsx.jar edu/nyu/csci/cc/fall14/SimpleListHx.java
edu/nyu/csci/cc/fall14/SimpleListHx.java:2895: error: variable a might not have been initialized
sink = sink.start(makeTConstructor(sink, a, hx("CatchAllAttributes"), null)).start(makeTConstructor(sink, a, hx(t.toString()), null)) .end();
                                         ^
Note: edu/nyu/csci/cc/fall14/SimpleListHx.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error
